# programming_familiarization_pt_3

./: .gitignore  README  TeamH_wheitman_Task7.Part3.md  hector_trajectory_apriltag_moving.launch.py  hector_trajectory_camera_moving.launch.py  motion_decoder.launch.py  motion_decoder_apriltag_moving.launch.py  motion_decoder_camera_moving.launch.py
src/motion_decoder/: CMakeLists.txt  package.xml
src/motion_decoder/include/motion_decoder/: image_converter.hpp
src/motion_decoder/launch/: apriltags_ros.launch
src/motion_decoder/src/: image_converter.cpp  motion_decoder.cpp
src/trajectory_server/: package.xml  setup.cfg  setup.py
src/trajectory_server/trajectory_server/: trajectory_server.py
